--- a/SitioTienda/index.html
+++ b/SitioTienda/index.html
@@ -70,6 +70,27 @@
             count = count + 1;
 
             $('#numElementos').text(count + " Elementos");
+            //llamar a la lista global para guardar temporalmente los items
+            //metodo post
+            //$.post('api/Carrito', id);
+
+            var url = '/api/Carrito/'+id;
+            $.ajax({
+                url: url,
+                type: 'POST',
+                data: id,
+                contentType: "application/json;chartset=utf-8",
+                statusCode: {
+                    201: function () {
+                       
+                        alert('Customer with id was updated');
+                    },
+                    400: function () {
+                        alert('Error');
+                    }
+                }
+            });
+                
 
         };
 
@@ -79,6 +100,7 @@
             //Paso de parametros y llamda a la vista productos.html
             window.location = "producto.html?idProducto=" + id;
         }
+
         //Obtener todos los prodcutos
         function GetAll() {
 
