--- a/SitioTienda/producto.html
+++ b/SitioTienda/producto.html
@@ -88,7 +88,8 @@
                         <h5 id='cantidad' class='text - center'>Cantidad disponible: "+ data.stock + " </h5>\
                         <h5 id='precio' class='text - center'>Precio: "+ data.Precio +" $"+"</h5>\
                         <h5 id='categoria' class='text - center'>Categoria: "+ data.Categoria.toUpperCase() + "</h5>\
-                        <h5 id='calificacion' class='text - center'>calificacion: No lo han calificado aun</h5>\
+                        <h5 id='calificacion' class='text - center'>No lo han calificado aun</h5>\
+                        <h5 id='cantp' class='text - center'>calificacion: No lo han puntuado aun</h5>\
                     </div >\
                 ");
 
@@ -106,7 +107,8 @@
             $('#tblList tbody').html('');
             $.getJSON('/api/Objetos/' + idProducto, function (data) {
 
-                $('#calificacion').text("Puntuacion: "+data.puntuacion);
+                $('#calificacion').text("Puntuacion: " + data.puntuacion);
+                $('#cantp').text("Numero de calificaciones: " + data.cantper);
                 numComentarios = data.comentarios.length-1;
                 
                 $.each(data, function (key, value) {
@@ -153,6 +155,7 @@
 
         }
 
+        //metodo de calificar
         function Calificar(id, cal) {
 
             var url = '/api/Objetos?id=' + id + '&cal=' + cal;
