--- a/SitioTienda/DetalleFactura.html
+++ b/SitioTienda/DetalleFactura.html
@@ -4,7 +4,39 @@
     <meta charset="utf-8" />
     <title></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="js/jquery-3.3.1.js"></script>
+    <script>    
 
+
+
+        $(document).ready(function () {
+
+            console.log("document loaded");
+            GetAll();
+
+        });
+
+        //Obtener todos los detalle factura
+        function GetAll() {
+
+            var item = "";
+
+            $('#tblList tbody').html('');
+            $.getJSON('/api/DetalleFactura', function (data) {
+
+                $.each(data, function (key, value) {
+
+                    item = "<tr><td>" + value.idFactura + "</td><td>" + value.nombres + "</td><td>" + value.cantidad + "</td><td>" + value.precioUnitario +"</td></tr>";
+                    $('#tblList tbody').append(item);
+
+                });
+
+
+            });
+        };
+
+
+    </script>
 </head>
 <body>
     <div class="container">
@@ -35,26 +67,18 @@
             </nav>
         </div>
 
-
-
-
         <div id="detalleFact">
-            <table class="table table-striped table-hover">
-                <tr class="table-primary">
-                    <th scope="col">Factura</th>
-                    <th scope="col">producto</th>
-                    <th scope="col">precio</th>
-                    <th scope="col">Cantidad</th>
-
-                </tr>
-                <tr id="datos">
-                    <td>col1</td>
-                    <td>col2</td>
-                    <td>col3</td>
-                    <td>col3</td>
-                </tr>
+            <table id="tblList" class="table table-bordered table-hover">
+                <thead>
+                    <tr>
+                        <th>Id Factura</th>
+                        <th>Producto</th>
+                        <th>Cantidad</th>
+                        <th>Valor</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
             </table>
-
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
